--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "format": "prettier --write \"**/*.tsx\""
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -25,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "prettier": "^3.5.3",
