--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.tsx\""
+    "format": "prettier --write \"**/*.tsx\"",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
+
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
