--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "format": "prettier --write \"**/*.tsx\"",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate"
-
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
