--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.8",
     "prismjs": "^1.30.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
